--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
           pip install -r requirements.txt
           python manage.py check
 
-  test:
+  test1:
     runs-on: ubuntu-latest
     needs: build
     steps:
