--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Django                                  # workflow name
 on:
   push:
     branches:                                 # similar to "only" in GitLab
-      - main
+      - master
   pull_request:
     types: [opened, synchronize, reopened]
 
