--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,8 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
 
-jobs:
-  test2:
+jobs:         
+  build:
     runs-on: ubuntu-latest
     needs: build
     steps:
