--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=tarabutgateway_dvwa-infosec-test-project-2
 sonar.organization=tarabutgateway
+sonar.qualitygate.wait=true
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=DVWA-InfoSec-Test-Project-2
