--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=tarabutgateway_dvwa-infosec-test-project-2
 sonar.organization=tarabutgateway
-sonar.qualitygate.wait=true
-continue-on-error: false
+#sonar.qualitygate.wait=true
+#continue-on-error: false
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=DVWA-InfoSec-Test-Project-2
 #sonar.projectVersion=1.0
